--- a/config.gradle
+++ b/config.gradle
@@ -12,12 +12,15 @@ ext {
             "androidx_appcompat"       : 'androidx.appcompat:appcompat:1.3.1',
             "androidx_constraintlayout": 'androidx.constraintlayout:constraintlayout:2.0.4',
             "androidx_ktx"             : 'androidx.core:core-ktx:1.6.0',
-            "android_material"             : 'com.google.android.material:material:1.3.0',
-            "retrofit"                 : 'com.squareup.retrofit2:retrofit:2.9.0',
-            "rxjava"                   : 'io.reactivex.rxjava2:rxjava:2.2.19',
-            "rxandroid"                : 'io.reactivex.rxjava2:rxandroid:2.1.1',
-            "arouterApi"                : 'com.alibaba:arouter-api:1.5.2',
-            "arouterCompiler"          : 'com.alibaba:arouter-compiler:1.5.2'
+            "android_material"         : 'com.google.android.material:material:1.3.0',
+            "retrofit2"                : 'com.squareup.retrofit2:retrofit:2.9.0',
+            "converter_gson"           : 'com.squareup.retrofit2:converter-gson:2.9.0',
+            "adapter_rxjava2"          : 'com.squareup.retrofit2:adapter-rxjava:2.9.0',
+            "rx_java2"                 : 'io.reactivex.rxjava2:rxjava:2.2.21',
+            "rx_android2"              : 'io.reactivex.rxjava2:rxandroid:2.1.1',
+            "arouterApi"               : 'com.alibaba:arouter-api:1.5.2',
+            "arouterCompiler"          : 'com.alibaba:arouter-compiler:1.5.2',
+            "mmkv"                     : 'com.tencent:mmkv-static:1.2.11',
     ]
 
     testDepends = [
