--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -46,8 +46,6 @@ dependencies {
     api libDepends.androidx_appcompat
     api libDepends.androidx_ktx
     api libDepends.androidx_constraintlayout
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     api libDepends.arouterApi
 
     api libDepends.retrofit2
@@ -56,6 +54,6 @@ dependencies {
     api libDepends.rx_java2
     api libDepends.rx_android2
 
-    api libDepends.mmkv
-
+    api project(path: ':library_widget')
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 }
