--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chen.app">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -9,7 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ChenApplication">
+        android:theme="@style/Theme.ChenApplication"
+        android:networkSecurityConfig="@xml/network_security_config">
+
+<!--        <meta-data-->
+<!--            android:name="ENVIRONMENT"-->
+<!--            android:value="${ENVIRONMENT}" />-->
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
