--- a/library_util/build.gradle
+++ b/library_util/build.gradle
@@ -32,4 +32,5 @@ android {
 dependencies {
     api 'com.google.code.gson:gson:2.8.9'
     api libDepends.mmkv
+    implementation 'androidx.annotation:annotation:1.2.0'
 }
