--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.ChenApplication"
         android:networkSecurityConfig="@xml/network_security_config">
-
+<!--        android:supportsRtl="true"-->
 <!--        <meta-data-->
 <!--            android:name="ENVIRONMENT"-->
 <!--            android:value="${ENVIRONMENT}" />-->
