内存泄露监测，防止OOM

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".MainActivity2"
             android:screenOrientation="portrait"/>
+        <activity android:name=".oom.OOMActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
